2007-05-31  Jeff Cai <jeff.cai@sun.com>
	
	* em-folder-view.c (emfv_message_selected_timeout) : 
	use displayed_uid instead of selected_uid.
	Fix #441992

2007-05-28  Jules Colding  <colding@omesc.com>

	* em-utils.c (em_utils_selection_set_urilist): Fix file leak
	(em_utils_selection_get_urilist): Fix file leak

	* importers/evolution-outlook-importer.c (import_outlook_import): Fix file leak

	* importers/mail-importer.c (import_mbox_import): Impossible code branch commented

	* importers/netscape-importer.c (netscape_import_filters): Fix file leak
	(netscape_init_prefs): Fix file leak

2007-05-28  Srinivasa Ragavan  <sragavan@novell.com>

	* evolution-mail.schemas.in.in: Make thread expand default to true.
	The threads should be expanded by default. Bug in previous commit.

2007-05-25  Matthew Barnes  <mbarnes@redhat.com>

	* mail-send-recv.c:
	Revert the dialog_map() solution and use ellipsized labels.
	Also, only the label column in the GtkTable should expand and fill,
	and never show a horizontal scrollbar.  (#335241)

2007-05-19  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #439512

	* em-mailer-prefs.c: (junk_plugin_changed): Mark strings for
	translation.

2007-05-17  Srinivasa Ragavan  <sragavan@novell.com>

	** Improved GMail like thread sorting. Even expanded threads are
	promoted up the list.

	* message-list.c: (ml_tree_sort_value_at),
	(message_list_construct): Add a provision to sort mails based on the
	lastest date of the thread with out substituting the value for
	display. 

2007-05-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Added support to specify the default thread state for messages.

	* evolution-mail.schemas.in.in:
	* message-list.c: (message_list_construct):

2007-05-15  Srinivasa Ragavan  <sragavan@novell.com>

	** Improved options for offline support.

	* em-folder-view.c: (prepare_offline), (emfv_prepare_offline): Adds
	option for downloading for offline.
	* evolution-mail.schemas.in.in: