@@ -1,0 +1,7 @@
+
+defaultlocaldir = $(privdatadir)/default/sv/mail/local
+
+defaultlocal_DATA = \
+	Inbox
+
+EXTRA_DIST = $(defaultlocal_DATA)
