@@ -1,3 +1,7 @@
+2007-05-31  Daniel Nylander <po@danielnylander.se>
+
+	*default/sv : Added Swedish Welcome mail. 
+
 2007-05-31  Jeff Cai <jeff.cai@sun.com>
 	
 	* em-folder-view.c (emfv_message_selected_timeout) : 
